# jams

./: .clangd  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  song.jam  song2.jam
src/: jam_file_parsing.cpp  jam_file_parsing.hpp  main.cpp  music_elements.cpp  music_elements.hpp
src/sound/sound_types/: sbpt.ini  sound_types.hpp
